@@ -9,6 +9,7 @@ Changelog
 - Show assignments info button only on rows with automatic roles. [phgross]
 - Fix sharing form for IE 11. [phgross]
 - Fix display of None on the bumblebee document overlay adapter as a document date. [Rotonen]
+- Fix pdf conversion for mails when resolving a dossier (ArchivalFileConverter). [njohner]
 - Lock oder of avaialbe roles in sharing endpoint. [phgross]
 - Fix archival_file and public_trial checks on documents overview. [phgross]
 - Add placeful workflow policy for inbox-area. Let inbox users edit and checkout documents but not the inbox itself. [phgross]
